<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingStart="24dp"
	android:paddingEnd="24dp">
	
	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
		android:id="@+id/swipe_view"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent">
		
		<androidx.core.widget.NestedScrollView
			android:id="@+id/scroll_view"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:scrollbars="none"
			android:fillViewport="true">
			
			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				
				<FrameLayout
					android:id="@+id/status_card_inclusion"
					android:layout_width="0dp"
					android:layout_height="196dp"
					android:layout_marginTop="24dp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent">
					
					<include
						android:id="@+id/included_status"
						layout="@layout/layout_status_card" />
					
					<include
						android:id="@+id/included_status_no_data"
						android:visibility="gone"
						layout="@layout/layout_status_card_no_data" />
					
				</FrameLayout>
				
				<ImageView
					android:id="@+id/status_emotion"
					android:layout_width="64dp"
					android:layout_height="64dp"
					android:layout_marginTop="16dp"
					android:src="@drawable/ic_error_outline_black_24dp"
					android:tint="@color/colorPrimaryDark"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/status_card_inclusion" />
				
				<TextView
					android:id="@+id/status_title_text_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:text="@string/status_unknown_title"
					android:textAppearance="@style/TextAppearance.Title"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toEndOf="@id/status_emotion"
					app:layout_constraintTop_toTopOf="@id/status_emotion" />
				
				<TextView
					android:id="@+id/status_text_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:text="@string/status_unknown_text"
					android:textAppearance="@style/TextAppearance.Default"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toEndOf="@id/status_emotion"
					app:layout_constraintTop_toBottomOf="@id/status_title_text_view" />
				
				<TextView
					android:id="@+id/status_debug_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="24dp"
					android:text="User id"
					android:textAppearance="@style/TextAppearance.Default"
					android:visibility="gone"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/status_text_view" />
				
				<Button
					android:id="@+id/survey_button"
					android:layout_width="0dp"
					android:layout_height="48dp"
					android:layout_marginTop="16dp"
					android:layout_marginEnd="24dp"
					android:background="@drawable/button_default_selector"
					android:text="@string/survey_button"
					android:textColor="@color/colorPrimary"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toStartOf="@+id/scan_button"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/status_text_view"
					app:layout_constraintVertical_bias="0.9" />
				
				<Button
					android:id="@+id/scan_button"
					android:layout_width="0dp"
					android:layout_height="48dp"
					android:layout_marginTop="16dp"
					android:background="@drawable/button_default_selector"
					android:text="@string/tracing_button"
					android:textColor="@color/colorPrimary"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toEndOf="@+id/survey_button"
					app:layout_constraintTop_toBottomOf="@id/status_text_view"
					app:layout_constraintVertical_bias="0.9" />
			
			</androidx.constraintlayout.widget.ConstraintLayout>
		
		</androidx.core.widget.NestedScrollView>
		
	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
